Get working saving to data dir

--- a/atari/src/assets/settings.json
+++ b/atari/src/assets/settings.json
@@ -68,5 +68,12 @@
     "desc": "Where to save and load the AI models from",
     "section": "AI Settings",
     "key": "models"
+  },
+  {
+    "type": "path",
+    "title": "Data folder",
+    "desc": "Where to save and load the AI models from and their videos",
+    "section": "AI Settings",
+    "key": "data_path"
   }
 ]
