Fix bug of trained models not being updated

--- a/.gitignore
+++ b/.gitignore
@@ -227,7 +227,6 @@ pyrightconfig.json
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -276,3 +275,4 @@ $RECYCLE.BIN/
 
 .venv/
 .env/
+.vscode/settings.json
